--- a/wiki/ApplicationDevelopment.wiki
+++ b/wiki/ApplicationDevelopment.wiki
@@ -27,4 +27,6 @@ In the following steps, we will develop and deploy our example application.
   # With Dropbox connected and operational, right click on the HTML file created in step 6 of the previous section (in our case “!ContextAwareApplication.html”) and select “Copy Public Link”. This link is the URL for the application. 
   # Note the HTML file contains three links to this file which are required to connect to Facebook. Replace these links with your own; otherwise the Facebook feature will not function as intended. 
   # In addition, locate the channel.html file within the /assets/fb/ directory and copy the public link for the channel.html file. Then located the !FacebookConnect function in the !ContextAwareApplication.html and !ContextAwareApplication.js files and replace the link for the channel.html file with your own.
-  # The application can now be deployed. Copy the public link for the HTML file and open it on a mobile device. Note there may be compatibility issues with different devices and browsers.  
+  # The application can now be deployed. Copy the public link for the HTML file and open it on a mobile device. Note there may be compatibility issues with different devices and browsers. See below for a screenshot of our example application running in Firefox on a Samsung Tab 2.
+http://s27.postimg.org/42vv4m2oz/contextappexample.jpg 
+ 
